// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index table clear cache button works from context menu 1`] = `"clearing cache..."`;

exports[`index table clear cache button works from context menu 2`] = `"open"`;

exports[`index table close index button works from context menu 1`] = `"closing..."`;

exports[`index table close index button works from context menu 2`] = `"closed"`;

exports[`index table flush button works from context menu 1`] = `"flushing..."`;

exports[`index table flush button works from context menu 2`] = `"open"`;

exports[`index table force merge button works from context menu 1`] = `"open"`;

exports[`index table force merge button works from context menu 2`] = `"forcing merge..."`;

exports[`index table force merge button works from context menu 3`] = `"open"`;

exports[`index table open index button works from context menu 1`] = `"opening..."`;

exports[`index table open index button works from context menu 2`] = `"open"`;

exports[`index table refresh button works from context menu 1`] = `"refreshing..."`;

exports[`index table refresh button works from context menu 2`] = `"open"`;

exports[`index table should change pages when a pagination link is clicked on 1`] = `
Array [
  "testy0",
  ".admin0",
  "testy1",
  "testy2",
  ".admin2",
  "testy3",
  "testy4",
  ".admin4",
  "testy5",
  ".admin5",
]
`;

exports[`index table should change pages when a pagination link is clicked on 2`] = `
Array [
  "testy0",
  ".admin0",
  "testy1",
  "testy2",
  ".admin2",
  "testy3",
  "testy4",
  ".admin4",
  "testy5",
  ".admin5",
]
`;

exports[`index table should filter based on content of search input 1`] = `
Array [
  "testy0",
]
`;

exports[`index table should show hidden indices only when the switch is turned on 1`] = `
Array [
  "testy0",
  ".admin0",
  "testy1",
  "testy2",
  ".admin2",
  "testy3",
  "testy4",
  ".admin4",
  "testy5",
  ".admin5",
  "testy6",
  ".admin6",
  "testy7",
  ".admin7",
  "testy8",
  ".admin8",
  "testy9",
  ".admin9",
  "testy10",
  ".admin10",
  "testy11",
  ".admin11",
  "testy12",
  ".admin12",
  "testy13",
  ".admin13",
  "testy14",
  ".admin14",
  "testy15",
  ".admin15",
  "testy16",
  ".admin16",
  "testy17",
  ".admin17",
  "testy18",
  ".admin18",
  "testy19",
  ".admin19",
  "testy20",
  ".admin20",
  "testy21",
  ".admin21",
  "testy22",
  ".admin22",
  "testy23",
  ".admin23",
  "testy24",
  ".admin24",
  "testy25",
  ".admin25",
]
`;

exports[`index table should show hidden indices only when the switch is turned on 2`] = `
Array [
  "testy0",
  ".admin0",
  "testy1",
  ".admin1",
  "testy2",
  ".admin2",
  "testy3",
  ".admin3",
  "testy4",
  ".admin4",
  "testy5",
  ".admin5",
  "testy6",
  ".admin6",
  "testy7",
  ".admin7",
  "testy8",
  ".admin8",
  "testy9",
  ".admin9",
  "testy10",
  ".admin10",
  "testy11",
  ".admin11",
  "testy12",
  ".admin12",
  "testy13",
  ".admin13",
  "testy14",
  ".admin14",
  "testy15",
  ".admin15",
  "testy16",
  ".admin16",
  "testy17",
  ".admin17",
  "testy18",
  ".admin18",
  "testy19",
  ".admin19",
  "testy20",
  ".admin20",
  "testy21",
  ".admin21",
  "testy22",
  ".admin22",
  "testy23",
  ".admin23",
  "testy24",
  ".admin24",
]
`;

exports[`index table should show the right context menu options when more than one closed index is selected 1`] = `
Array [
  "Open indices",
  "Delete indices",
]
`;

exports[`index table should show the right context menu options when more than one open index is selected 1`] = `
Array [
  "Close indices",
  "Force merge indices",
  "Refresh indices",
  "Clear indices cache",
  "Flush indices",
  "Delete indices",
]
`;

exports[`index table should show the right context menu options when one index is selected and closed 1`] = `
Array [
  "Show index overview",
  "Show index settings",
  "Show index mapping",
  "Open index",
  "Delete index",
]
`;

exports[`index table should show the right context menu options when one index is selected and open 1`] = `
Array [
  "Show index overview",
  "Show index settings",
  "Show index mapping",
  "Show index stats",
  "Close index",
  "Force merge index",
  "Refresh index",
  "Clear index cache",
  "Flush index",
  "Delete index",
]
`;

exports[`index table should show the right context menu options when one open and one closed index is selected 1`] = `
Array [
  "Open indices",
  "Delete indices",
]
`;

exports[`index table should sort when header is clicked 1`] = `
Array [
  ".admin0",
  ".admin10",
  ".admin100",
  ".admin101",
  ".admin102",
  ".admin103",
  ".admin104",
  ".admin11",
  ".admin12",
  ".admin13",
  ".admin14",
  ".admin15",
  ".admin16",
  ".admin17",
  ".admin18",
  ".admin19",
  ".admin2",
  ".admin20",
  ".admin21",
  ".admin22",
  ".admin23",
  ".admin24",
  ".admin25",
  ".admin26",
  ".admin27",
  ".admin28",
  ".admin29",
  ".admin30",
  ".admin31",
  ".admin32",
  ".admin33",
  ".admin34",
  ".admin35",
  ".admin36",
  ".admin37",
  ".admin38",
  ".admin39",
  ".admin4",
  ".admin40",
  ".admin41",
  ".admin42",
  ".admin43",
  ".admin44",
  ".admin45",
  ".admin46",
  ".admin47",
  ".admin48",
  ".admin49",
  ".admin5",
  ".admin50",
]
`;

exports[`index table should sort when header is clicked 2`] = `
Array [
  "testy99",
  "testy98",
  "testy97",
  "testy96",
  "testy95",
  "testy94",
  "testy93",
  "testy92",
  "testy91",
  "testy90",
  "testy9",
  "testy89",
  "testy88",
  "testy87",
  "testy86",
  "testy85",
  "testy84",
  "testy83",
  "testy82",
  "testy81",
  "testy80",
  "testy8",
  "testy79",
  "testy78",
  "testy77",
  "testy76",
  "testy75",
  "testy74",
  "testy73",
  "testy72",
  "testy71",
  "testy70",
  "testy7",
  "testy69",
  "testy68",
  "testy67",
  "testy66",
  "testy65",
  "testy64",
  "testy63",
  "testy62",
  "testy61",
  "testy60",
  "testy6",
  "testy59",
  "testy58",
  "testy57",
  "testy56",
  "testy55",
  "testy54",
]
`;
